session21-python/final-devops-project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final-app
  labels:
    app.kubernetes.io/part-of: final-devops-project
