session21-python/final-devops-project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-app
  labels:
    app.kubernetes.io/name: final-app
spec:
  selector:
    app.kubernetes.io/name: final-app
  ports:
    - { name: http, port: 80, targetPort: http }
