session21-python/final-devops-project/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-app
spec:
  ingressClassName: nginx
  rules:
    - host: final.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: final-app, port: { name: http } }
